crates/ars-components/src/utility/dismissable/snapshots/ars_components__utility__dismissable__tests__dismissable_part_dismiss_button.snap
---
source: crates/ars-components/src/utility/dismissable.rs
expression: "snapshot_attrs(&api(Props::new()).part_attrs(Part::DismissButton))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "dismiss-button",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "dismissable",
            ),
        ),
        (
            Data(
                "ars-visually-hidden",
            ),
            Bool(
                true,
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Dismiss",
            ),
        ),
        (
            Role,
            String(
                "button",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
