crates/ars-components/src/utility/dismissable/snapshots/ars_components__utility__dismissable__tests__dismissable_root_default.snap
---
source: crates/ars-components/src/utility/dismissable.rs
expression: "snapshot_attrs(&api(Props::new()).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "dismissable",
            ),
        ),
    ],
    styles: [],
}
